@@ -8,6 +8,7 @@ Version 1.3
 [added] support for ThemeZee Breadcrumbs plugin
 [added] custom header image settings
 [added] email icon to social menu
+[added] theme links in theme options panel
 
 Version 1.2.9
 -----------------------------------
